tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__merge_with_pre_merge_failure_zsh.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
✓ Code formatting check passed
✗ Test suite failed: 3 tests failing
❌ [31mpre-merge command failed: [1m[31mtest[0m[0m

Command failed with exit code: exit status: 1

💡 [2mUse --no-hooks to skip pre-merge commands[0m
🔄 [36mRunning pre-merge: [1mformat[0m:[0m
[40m [0m  [1m[34mecho[0m [32m'✓ Code formatting check passed'[0m[0m


🔄 [36mRunning pre-merge: [1mtest[0m:[0m
[40m [0m  [1m[34mecho[0m [32m'✗ Test suite failed: 3 tests failing'[0m [36m&&[0m [1m[34mexit[0m 1[0m
