tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__readme_example_approval_prompt.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: prompt_only
---
🟡 repo needs approval to execute 3 commands:

⚪ post-create install:
   echo 'Installing dependencies...'
⚪ post-create build:
   echo 'Building project...'
⚪ post-create test:
   echo 'Running tests...'
❓ Allow and remember? [y/N]
