tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__switch_with_hooks_fish.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
🔄 [36mExecuting (post-create):[0m
[40m [0m echo 'Installing dependencies...'

🔄 [36mExecuting (post-create):[0m
[40m [0m echo 'Building project...'

🔄 [36mStarting (background):[0m
[40m [0m echo 'Starting dev server on port 3000'

🔄 [36mStarting (background):[0m
[40m [0m echo 'Watching for file changes'

✅ [32mCreated new worktree for [1m[32mfeature-hooks[0m at [TMPDIR]/test-repo.feature-hooks[0m
Installing dependencies...
Building project...
